# hologram-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  test_kappa.rs
.githooks/: pre-push
.github/workflows/: ci.yml  nightly.yml  pages.yml
apps/web/: package.json  pnpm-lock.yaml  vitest.config.ts
apps/web/src/: ipc.ts  (+7 more)
crates/hologram-ai/: Cargo.toml
crates/hologram-ai-common/: Cargo.toml
crates/hologram-ai-common/src/: exec_context.rs  lib.rs
crates/hologram-ai-common/src/ir/: dtype.rs  graph.rs  mod.rs  op.rs  param.rs
crates/hologram-ai-common/src/lower/: builder.rs  custom_ops.rs  dispatch.rs  mod.rs  quantize.rs  quantize_graph.rs  resolve_encodings.rs  shape_spec_bridge.rs  strategy.rs
crates/hologram-ai-common/src/mem/: planner.rs
crates/hologram-ai-common/src/opt/: add_rmsnorm_fusion.rs  attention_fusion.rs  concat_matmul_fusion.rs  const_dedup.rs  const_eval.rs  const_eval_ops.rs  constant_fold.rs  data_prop.rs  dead_node.rs  decompose.rs  graph_utils.rs  kv_slot_injection.rs  layernorm_fusion.rs  matmul_activation_fusion.rs  mod.rs  norm_projection_fusion.rs  oracle.rs  patch_prune.rs  pipeline.rs  position_ids_injection.rs  resolve_slice_params.rs  rmsnorm_fusion.rs  scalar_absorption.rs  semantic_prop.rs  shape_consistency.rs  shape_heal.rs  shape_prop.rs  shared_input_projection_fusion.rs  slice_to_gather.rs  swiglu_fusion.rs  swiglu_projection_fusion.rs  transpose_matmul_fusion.rs
crates/hologram-ai-common/src/rules/: mod.rs  pattern_rules.rs
crates/hologram-ai-common/tests/: fusion_metrics.rs  onnx_conformance.rs
crates/hologram-ai-conformance/: Cargo.toml
crates/hologram-ai-conformance/fixtures/: batched_matmul_4d.onnx  causal_mask.onnx  concat_4d_last_axis.onnx  expand_dynamic_shape.onnx  gather_i64_index_gt_dim.onnx  gather_shape_i64.onnx  gemm_trans_b.onnx  generate.py  gqa_expand_attention.onnx  gqa_expand_attention_static.onnx  gqa_flat_single_kv.onnx  gqa_fused_reference.onnx  gqa_k_expand_dynamic_shape.onnx  gqa_k_expand_shape_start_end.onnx  layer_norm.onnx  matmul.onnx  matmul_dyn_seq.onnx  mini_transformer.onnx  multihead_attention.onnx  range_i64_cast.onnx  reshape_unpack_heads_dyn_seq.onnx  rms_norm.onnx  scaled_dot_product_attention.onnx  shape_start_end.onnx  shape_start_end_dynamic_seq.onnx  shape_then_cast.onnx  slice_shape_4d_dynamic.onnx  slice_shape_dynamic_seq.onnx  slice_shape_to_gather.onnx  softmax.onnx  softmax_dyn_seq.onnx  swiglu.onnx  swiglu_fused_reference.onnx
crates/hologram-ai-conformance/src/: comparator.rs  exec_comparator.rs  lib.rs  ort_runner.rs  reference.rs  tolerance.rs  validate_ort.rs
crates/hologram-ai-conformance/tests/: bdd.rs  exec_conformance.rs  op_conformance.rs  ort_conformance.rs  ort_full_model_e2e.rs  quant_conformance.rs  structural_ce.rs  structural_cf.rs  structural_lw.rs  structural_za.rs  structural_zm.rs
crates/hologram-ai-core/: Cargo.toml
crates/hologram-ai-onnx/: Cargo.toml  build.rs
crates/hologram-ai-onnx/proto/: onnx.proto
crates/hologram-ai-onnx/src/: dtype_map.rs  graph_builder.rs  lib.rs  op_map.rs  resolve_op_params.rs  tensor_map.rs
crates/hologram-ai-quant/: Cargo.toml
crates/hologram-ai-quant/src/: encode.rs  lib.rs
crates/hologram-ai-safetensors/: Cargo.toml
crates/hologram-ai-safetensors/src/: builder.rs  lib.rs  llama.rs  parametric.rs
crates/hologram-ai-tokenizer/: Cargo.toml
crates/hologram-ai-tokenizer/src/: bpe.rs  config.rs  native.rs
crates/hologram-ai-wasm/: Cargo.toml
crates/hologram-ai-wasm/src/: lib.rs
crates/hologram-ai/benches/: inference.rs  scaling.rs
crates/hologram-ai/src/: cli.rs  compiler.rs  lib.rs  session.rs  speculative.rs  validate.rs
crates/hologram-ai/src/commands/: run_cmd.rs
crates/hologram-ai/src/download/: convert.rs  hf_api.rs  mod.rs  progress.rs  safetensors_stream.rs
crates/hologram-ai/tests/: bert_e2e.rs  int8_accuracy.rs  ma_external_models.rs  mini_fixture.rs  patch_prune_e2e.rs  perf_contract.rs  qwen2_e2e.rs  resnet50_e2e.rs  sd_pipeline_e2e.rs  sd_text_encoder_e2e.rs  sd_unet_e2e.rs  sd_vae_e2e.rs  tinyllama_e2e.rs  uor_native_smoke.rs  validate_test.rs
examples/: qwen2.toml  tinyllama.toml
scripts/: compare_intermediates.py  compare_node_by_node.py  compare_ort.py  download-models.sh  export_diffusion_onnx.py  extract_tinyllama_probes.py  find_divergence.py  find_divergent_node.py  gen-fixtures.py  ort_intermediates.py
specs/: SPRINT.md
specs/adrs/: 0003-hologram-ai-import-boundary.md  0004-hologram-ai-quantization-model.md  0005-hologram-ai-runtime-boundary.md  0006-hologram-ai-mvp-scope.md
specs/docs/: README.md  architecture.md  cli.md  crate-layout.md  import-pipeline.md  lowering.md  risks.md  roadmap.md  runtime-model.md  testing-strategy.md
specs/plans/: 002-mvp-remaining.md  003-op-extensibility.md  004-onnx-last-mile.md  008-shape-context-graph.md  009-lut-kvcache-runtime.md  010-gguf-generation-fix.md  011-gguf-step1-gibberish-fix.md  012-attention-fusion-kvcache-lutgemm.md  013-clean-kv-cache-architecture.md  014-hologram-kv-cache-needed.md  014-onnx-coherent-generation.md  015-hologram-types-needed.md  016-paged-attention.md  017-performance-optimization.md  018-tape-executor-hot-path.md  020-optimization-prioritization.md  021-multi-component-archives.md  022-integration-hardening.md  026-single-model-rearchitecture.md  027-stable-diffusion.md  030-cpu-runtime-performance.md  031-onnx-import-param-inference.md  032-precision-epilogue-roadmap.md  033-shape-context-wiring.md  034-runtime-acceleration-roadmap.md  035-runtime-cleanup.md  036-streaming-executor.md  037-fused-dequant-kernel-optimizations.md  040-cpu-inference-performance.md  041-onnx-correctness-fix.md  045-variable-length-fix.md  051-byte-domain-q4-matmul.md  052-shared-input-projection-fusion.md  053-q2-speculative-decoding.md  054-deep-decode-fusion.md  056-path-to-60-revised.md  057-session-summary-deep-decode-fusion.md  060-host-metadata-section.md  063-vit-patch-prune.md  064-streaming-compilation.md  (+13 more)
specs/prompts/: 001-hologram-ai-week1.md  002-hologram-ai-week2.md  003-hologram-ai-week3.md  (+2 more)
(+46 files in other folders)
