[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/uor-framework/hologram-ai"

[workspace.dependencies]
# hologram root crate (path dep — local sibling directory)
hologram = { path = "../hologram", features = ["cli", "accelerate", "parallel"] }

# workspace-internal
hologram-ai-quant  = { path = "crates/hologram-ai-quant" }
hologram-ai-common = { path = "crates/hologram-ai-common" }
hologram-ai-onnx   = { path = "crates/hologram-ai-onnx" }
hologram-ai-gguf   = { path = "crates/hologram-ai-gguf" }
hologram-ai-tokenizer = { path = "crates/hologram-ai-tokenizer" }

# third-party
anyhow        = "1"
thiserror     = "2"
half          = { version = "2", features = ["std"] }
smallvec      = { version = "1", features = ["union"] }
bytes         = "1"
memmap2       = "0.9"
bytemuck      = { version = "1", features = ["derive"] }
indexmap      = { version = "2", features = ["serde"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
tracing       = "0.1"
futures       = "0.3"
approx        = "0.5"
clap          = { version = "4", features = ["derive"] }
prost         = "0.13"
prost-build   = "0.13"
reqwest       = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
indicatif     = "0.17"
tokio         = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "time"] }
tempfile      = "3"
sha2          = "0.10"
dirs          = "5"
which         = "7"
rayon         = "1"
rkyv          = "0.8"

# Keep debug symbols but optimize enough for usable LLM inference (~10-50x faster).
[profile.dev]
opt-level = 2

# Release: full optimization with thin LTO and single codegen unit.
# codegen-units = 1 yields 10-20% for compute-bound workloads.
# thin LTO adds cross-crate inlining (benefits hologram base kernels).
[profile.release]
lto = "thin"
codegen-units = 1
