[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/uor-framework/hologram-ai"

[workspace.dependencies]
# hologram 0.5.0 is UOR-native: there is no umbrella `hologram` crate anymore.
# Consumers depend on the individual member crates, sourced from hologram's
# canonical upstream (origin/main of Hologram-Technologies/hologram). Cargo.lock
# pins the exact commit; `cargo update -p <crate>` advances them together.
# Runtime-core crates (types/ops/graph) are no_std-capable (default = []); the
# host-shell stack (compiler/exec/archive/backend) is built with `std`.
hologram-types    = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main" }
hologram-ops      = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main" }
hologram-graph    = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main" }
hologram-compiler = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main" }
# `parallel` (rayon) is NOT pinned here — it cannot run on wasm32 (no threads).
# It is an opt-in feature, enabled by default for native consumers (the
# `hologram-ai` lib/CLI) via their own `parallel` feature, and left off for the
# `hologram-ai-wasm` browser build. See ADR-0017.
hologram-exec     = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main" }
hologram-archive  = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main", features = ["model-formats"] }
hologram-backend  = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main" }
hologram-host     = { git = "https://github.com/Hologram-Technologies/hologram.git", branch = "main" }
holospaces        = { git = "https://github.com/Hologram-Technologies/holospaces.git", branch = "main" }

# workspace-internal
hologram-ai-quant  = { path = "crates/hologram-ai-quant" }
hologram-ai-common = { path = "crates/hologram-ai-common" }
hologram-ai-onnx   = { path = "crates/hologram-ai-onnx" }
hologram-ai-tokenizer = { path = "crates/hologram-ai-tokenizer" }
hologram-ai-core   = { path = "crates/hologram-ai-core" }

criterion     = { version = "0.5", features = ["html_reports"] }

# third-party
anyhow        = "1"
thiserror     = "2"
half          = { version = "2", features = ["std"] }
smallvec      = { version = "1", features = ["union"] }
bytes         = "1"
memmap2       = "0.9"
bytemuck      = { version = "1", features = ["derive"] }
indexmap      = { version = "2", features = ["serde"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
toml          = "0.8"
tracing       = "0.1"
futures       = "0.3"
approx        = "0.5"
clap          = { version = "4", features = ["derive"] }
prost         = "0.13"
reqwest       = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
indicatif     = "0.17"
tokio         = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "time"] }
tempfile      = "3"
sha2          = "0.10"
dirs          = "5"
which         = "7"
rayon         = "1"
rkyv          = "0.8"
blake3        = "1"
parking_lot   = "0.12"

# Keep debug symbols but optimize enough for usable LLM inference (~10-50x faster).
[profile.dev]
opt-level = 2

# Release: full optimization with thin LTO and single codegen unit.
# codegen-units = 1 yields 10-20% for compute-bound workloads.
# thin LTO adds cross-crate inlining (benefits hologram base kernels).
[profile.release]
lto = "thin"
codegen-units = 1
