[package]
name    = "hologram-ai-quant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# no_std runtime core: `half` without its `std` feature (the workspace pin
# forces `std`, which would defeat the wasm/embedded build).
half       = { version = "2", default-features = false }
smallvec.workspace = true
bytemuck.workspace = true
libm = { version = "0.2.16", default-features = false }
