[package]
name = "hologram-ai-safetensors"
version = "0.1.0"
edition = "2021"

[dependencies]
hologram-types = { workspace = true }
hologram-ops = { workspace = true }
hologram-graph = { workspace = true }
hologram-ai-common = { workspace = true }
safetensors = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
