[package]
name    = "hologram-ai-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hologram.workspace   = true
anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
rkyv.workspace       = true
regex                = "1"
