[package]
name    = "hologram-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hologram-ai"
path = "src/cli.rs"

[features]
# Feature-gate large model E2E tests that require local model files (not run in CI).
e2e = []

[dependencies]
hologram-ai-common.workspace = true
hologram-ai-quant.workspace  = true
hologram-ai-onnx.workspace   = true
hologram-ai-tokenizer.workspace = true
# hologram with compiler feature — needed for hologram::compile()
# default features already include compiler; workspace dep points to local path
hologram.workspace = true

bytemuck.workspace     = true
anyhow.workspace       = true
thiserror.workspace    = true
futures.workspace      = true
clap.workspace         = true
tracing.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
toml.workspace         = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest.workspace    = true
indicatif.workspace  = true
tokio.workspace      = true
tempfile.workspace   = true
sha2.workspace       = true
dirs.workspace       = true
which.workspace      = true
memmap2.workspace    = true
rayon.workspace      = true
rkyv.workspace       = true
parking_lot.workspace = true

[dev-dependencies]
# Provides onnx_builder (pure Rust, no ORT) for mini fixture tests.
hologram-ai-conformance = { path = "../hologram-ai-conformance" }
# hologram-backend is accessed via hologram's re-export
bytemuck = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "inference"
harness = false
